<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_daily_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.karimchehab.IIFYM_Tracker.Activities.Main.activityViewDailyItem">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="328dp"
            android:layout_height="200dp"
            android:id="@+id/layoutInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/listviewIngredients"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:text="@string/lblName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/lblName"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:text="@string/lblBrand"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/lblBrand"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/lblCalories"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/lblCalories"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:text="@string/lblkcal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView39"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/CaloriesProgessColor" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/lblCarbs"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/lblCarbs"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:text="@string/lblC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblc"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/CarbProgressColor" />

                    <TextView
                        android:text="@string/lblProtein"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/lblProtein"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:text="@string/lblp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/ProteinProgessColor" />

                    <TextView
                        android:text="@string/lblFat"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/lblFat"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:text="@string/lblf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblf"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/FatProgessColor" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/lblPortionAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/lblPortionAmount"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:text="@string/lblPortionType"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:id="@+id/lblPortionType"
                        android:textAlignment="textStart"
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="2dp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:text="@string/lblDeleteFromDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblDelete"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/fabDelete"
            app:layout_constraintRight_toLeftOf="@+id/fabDelete"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginEnd="8dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            android:id="@+id/fabDelete"
            android:scaleType="fitXY"
            android:layout_gravity="bottom|right"
            android:src="@drawable/ic_delete"
            android:layout_weight="1"
            android:baselineAlignBottom="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/listviewIngredients" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
