<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.Main.activityCreateFood">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LinearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etxtName"
                android:textColor="@color/colorPrimary"
                android:hint="@string/hintName"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:inputType="textCapSentences"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etxtBrand"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimary"
                android:hint="@string/hintBrand"
                android:textSize="14sp"
                android:textAlignment="textStart"
                android:inputType="textCapSentences"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lblkcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView38"
                android:textColor="@color/CaloriesProgessColor" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="number"
                android:ems="6"
                android:id="@+id/etxtCalories"

                android:textColor="?attr/colorPrimary"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:hint="@string/hintCalories"
                android:maxLength="5" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/lblC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="0.167"
                android:textColor="@color/CarbProgressColor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="5"
                android:id="@+id/etxtCarbs"
                android:textColor="@color/colorPrimary"
                android:textAlignment="textStart"
                android:textSize="14sp"
                android:layout_weight="0.167"
                android:hint="@string/hintCarbs" />

            <TextView
                android:text="@string/lblp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:layout_weight="0.167"
                android:textColor="@color/ProteinProgessColor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:id="@+id/etxtProtein"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView"
                android:textColor="@color/colorPrimary"
                android:textAlignment="textStart"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:layout_weight="0.167"
                android:hint="@string/hintProtein" />

            <TextView
                android:text="@string/lblf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_weight="0.167"
                android:textColor="@color/FatProgessColor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:id="@+id/etxtFat"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView3"
                android:textColor="@color/colorPrimary"
                android:textAlignment="textStart"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:layout_weight="0.167"
                android:hint="@string/hintFat" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <info.hoang8f.android.segmented.SegmentedGroup
                android:id="@+id/seggroupPortionType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:sc_border_width="2dp"
                app:sc_corner_radius="10dp">

                <RadioButton
                    android:id="@+id/rbtnServing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serving"
                    style="@style/RadioButton"
                    android:checked="true"
                    android:layout_gravity="center_vertical|center_horizontal" />

                <RadioButton
                    android:id="@+id/rbtnWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    style="@style/RadioButton"
                    android:layout_gravity="center_vertical|center_horizontal" />

            </info.hoang8f.android.segmented.SegmentedGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:id="@+id/etxtPortionAmount"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:hint="@string/hintAmount" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerUnit"
                android:gravity="center_vertical|center"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbIsDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="Add to daily log?"
                android:textColor="@color/colorPrimary" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:text="@string/dateInitial"
                android:ems="3"
                android:id="@+id/etxtDate"
                android:textColor="?attr/colorPrimary"
                android:textSize="14sp"
                android:gravity="right|center_vertical"
                android:layout_gravity="right|center_vertical"
                android:drawableRight="@drawable/drawable_ic_calendar"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_width="105dp"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>


    </LinearLayout>

</RelativeLayout>
