<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_daily_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.karimchehab.IIFYM.Activities.Main.activitySelectDailyItem">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="50dp"
                fab:srcCompat="@drawable/ic_search"
                android:id="@+id/iconSearch"
                android:scaleType="fitCenter" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:ems="10"
                android:id="@+id/etxtSearch"
                android:hint="Search ..."
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_weight="0.75" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblFrequent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblFrequent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <ListView
            android:layout_width="match_parent"
            android:id="@+id/listviewSavedItems"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"></ListView>

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabCreateNew"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="#c8fcfcfc"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/fabWhitePressed"
        fab:menu_fab_hide_animation="@anim/hide_to_bottom"
        fab:menu_fab_show_animation="@anim/show_from_bottom"
        fab:menu_fab_size="mini"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_style="@style/menu_labels_style"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabCreateNewFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_food"
            fab:fab_colorNormal="@color/Transparent"
            fab:fab_label="@string/lblNewFood"
            fab:fab_showShadow="false"
            fab:fab_size="normal"
            fab:fab_colorPressed="@color/colorPrimaryLight" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabCreateNewMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_meal"
            fab:fab_colorNormal="@color/Transparent"
            fab:fab_label="@string/lblNewMeal"
            fab:fab_showShadow="false"
            fab:fab_size="normal"
            fab:fab_colorPressed="@color/colorPrimaryLight" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>
